--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.0",
-    "@angular/cdk": "^18.2.14",
+    "@angular/cdk": "^19.2.0",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.0",
     "@ckeditor/ckeditor5-angular": "^8.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.2",
     "@ckeditor/ckeditor5-core": "^42.0.1",
     "@ckeditor/ckeditor5-engine": "^42.0.1",
     "@ckeditor/ckeditor5-utils": "^42.0.1",
@@ -35,6 +36,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/ckeditor__ckeditor5-build-classic": "^37.0.4",
     "@types/flatpickr": "^3.1.2",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.49.2",
