--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ngx-pagination": "^6.0.3",
     "remixicon": "^4.3.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.1.15",
     "tailwind-scrollbar": "^3.1.0",
     "tslib": "^2.3.0",
